# matous-task

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/: main.py
src/clusterer/: clusterer.py  containers.py
src/tests/: test.json  test_algoritm_processor.py  test_clusterer.py  test_containers.py
